--- a/config/locales/devise.views.ru.yml
+++ b/config/locales/devise.views.ru.yml
@@ -54,3 +54,14 @@ ru:
     unlocks:
       new:
         resend_unlock_instructions: Выслать подтверждение заново
+    failure:
+      user:
+        not_found_in_database: "Пользователь не найден в базе данных."
+        already_authenticated: "Вы уже вошли в систему."
+        unauthenticated: "Вам необходимо войти в систему или зарегистрироваться."
+        unconfirmed: "Вы должны подтвердить вашу учётную запись."
+        locked: "Ваша учётная запись заблокирована."
+        invalid: "Неверный адрес e-mail или пароль."
+        invalid_token: "Неверный ключ аутентификации."
+        timeout: "Ваш сеанс закончился. Пожалуйста, войдите в систему снова."
+        inactive: "Ваша учётная запись ещё не активирована."
